# hdfdts

./: build-z-h5-nc4.sh  snapshot-031108  snapshot.real  snapshot_version
CVSROOT/: commitinfo  cvswrappers  hdf5-template  log.pl  loginfo  modules  rcsinfo  rcstemplate
DailyTest/: DailyHDF4Tests  DailyHDF5Tests  DailyHDFEOS2Tests  DailyNetCDF4Tests
DailyTestRemote/: DailyTest  Dailytest  SubDailytest  snaptest_hdf5  snaptest_hdf5_1_6  subjob
batch-scripts/: README  hdf5_lrk.sl  makecheck-p.sh  makecheck-s.sh  minphdf5_lrk.sl  phdf5_lrk.sl  test_waitfor.sh
batch-scripts/obsolete/: cudabatch
h5check/: Makefile  Makefile.am  Makefile.in  README  configure  configure.ac
h5check/config/: commence.am
h5check/doc/: h5checker_obj.htm
h5check/src/: Makefile.am  Makefile.in  h5_check.h  h5_error.h  h5check_public.h  h5checker.c  h5checkerV2_0.c  h5checker_api.c  h5chk_config.h.in  h5error.c
h5check/test/: Makefile  Makefile.am  Makefile.in  README  testgen.c  testgen.h  testh5check.sh
h5check/test/invalidfiles/: README
h5check/tool/: Makefile  Makefile.am  Makefile.in  h5checker_main.c
hugs/iokernel/: Makefile  iokernel.c  iokernel.h  sim_input.txt
iospeed.old/: Makefile.ffio  Makefile.in  README  ffio.h  gopt.c  gopt.h  iospeed.c  iospeed.h  testiospeed.sh
reports/hdf/: test_machines
scripts/DailyTest/: DailyH5CompatTests  DailyHDF4Tests  DailyHDF5BranchTests  DailyHDF5Tests  DailyHDFEOS5Tests  DailyHDFEOS5_1_6Tests
scripts/old/DailyTestRemote/: DailyTest  snaptest_common  subjob
scripts/release/: mkreleasedirs
scripts/reports/hdf/: combined_report_tests
