#
# Copyright by The HDF Group 2007.
# All rights reserved.
#
##
## Makefile.am
## Run automake to generate a Makefile.in from this file.
#
# HDF5 Library Makefile(.in)
#

include $(top_srcdir)/config/commence.am

# This is our main target, the h5tools library.
lib_LIBRARIES=libh5check.a

libh5check_a_SOURCES=h5checker.c h5checker_api.c h5error.c h5checkerV2_0.c


include $(top_srcdir)/config/conclude.am

